--- a/test-output/index.html
+++ b/test-output/index.html
@@ -60,7 +60,7 @@
                 </li>
                 <li>
                   <a href="#" panel-name="group-Suite" class="navigator-link ">
-                    <span>0 groups</span>
+                    <span>1 group</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +103,7 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="favbet.testCases.LoginTest" class="method navigator-link" hash-for-method="homeLogin">homeLogin</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="favbet.testCases.LoginTest" class="method navigator-link" hash-for-method="loginTest(ManUtd, Manutd123, Invalid)">loginTest(ManUtd, Manutd123, Invalid)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -126,9 +126,10 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="homeLogin">
-                  </a> <!-- homeLogin -->
-                  <span class="method-name">homeLogin</span>
+                  <a name="loginTest(ManUtd, Manutd123, Invalid)">
+                  </a> <!-- loginTest(ManUtd, Manutd123, Invalid) -->
+                  <span class="method-name">loginTest</span>
+                  <span class="parameters">(ManUtd,Manutd123,Invalid)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -143,6 +144,8 @@
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;https://testng.org/testng-1.0.dtd&quot;&gt;
 &lt;suite name=&quot;Suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
+  &lt;parameter name=&quot;OS&quot; value=&quot;windows&quot;/&gt;
+  &lt;parameter name=&quot;Browser&quot; value=&quot;chrome&quot;/&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Test&quot;&gt;
     &lt;classes&gt;
       &lt;class name=&quot;favbet.testCases.LoginTest&quot;/&gt;
@@ -169,6 +172,14 @@
             <span class="header-content">Groups for Suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="test-group">
+              <span class="test-group-name">Regression</span>
+              <br/>
+              <div class="method-in-group">
+                <span class="method-in-group-name">loginTest</span>
+                <br/>
+              </div> <!-- method-in-group -->
+            </div> <!-- test-group -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="times-Suite" class="panel">
@@ -187,14 +198,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'homeLogin')
+data.setCell(0, 1, 'loginTest')
 data.setCell(0, 2, 'favbet.testCases.LoginTest')
-data.setCell(0, 3, 131);
+data.setCell(0, 3, 637);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 131 ms</span>
+              <span class="suite-total-time">Total running time: 637 ms</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -222,12 +233,12 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">favbet.testCases.LoginTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
-                <span class="method-name">setUp</span>
+                <span class="method-name">setUp(chrome, windows)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">homeLogin</span>
-                <span class="method-start">3447 ms</span>
+                <span class="method-name">loginTest(ManUtd, Manutd123, Invalid)</span>
+                <span class="method-start">3069 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
