--- a/test-output/index.html
+++ b/test-output/index.html
@@ -60,7 +60,7 @@
                 </li>
                 <li>
                   <a href="#" panel-name="group-Suite" class="navigator-link ">
-                    <span>1 group</span>
+                    <span>0 groups</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +103,7 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="favbet.testCases.LoginTest" class="method navigator-link" hash-for-method="loginTest(ManUtd, Manutd123, Invalid)">loginTest(ManUtd, Manutd123, Invalid)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="favbet.testCases.betInsufficientFundsTest" class="method navigator-link" hash-for-method="betInsufficientFunds">betInsufficientFunds</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -121,15 +121,14 @@
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">favbet.testCases.LoginTest</span>
+              <span class="class-name">favbet.testCases.betInsufficientFundsTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="loginTest(ManUtd, Manutd123, Invalid)">
-                  </a> <!-- loginTest(ManUtd, Manutd123, Invalid) -->
-                  <span class="method-name">loginTest</span>
-                  <span class="parameters">(ManUtd,Manutd123,Invalid)</span>
+                  <a name="betInsufficientFunds">
+                  </a> <!-- betInsufficientFunds -->
+                  <span class="method-name">betInsufficientFunds</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -152,7 +151,7 @@
   &lt;/listeners&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;favbet.testCases.LoginTest&quot;/&gt;
+      &lt;class name=&quot;favbet.testCases.betInsufficientFundsTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test --&gt;
 &lt;/suite&gt; &lt;!-- Suite --&gt;
@@ -176,14 +175,6 @@
             <span class="header-content">Groups for Suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
-            <div class="test-group">
-              <span class="test-group-name">Regression</span>
-              <br/>
-              <div class="method-in-group">
-                <span class="method-in-group-name">loginTest</span>
-                <br/>
-              </div> <!-- method-in-group -->
-            </div> <!-- test-group -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="times-Suite" class="panel">
@@ -202,14 +193,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'loginTest')
-data.setCell(0, 2, 'favbet.testCases.LoginTest')
-data.setCell(0, 3, 542);
+data.setCell(0, 1, 'betInsufficientFunds')
+data.setCell(0, 2, 'favbet.testCases.betInsufficientFundsTest')
+data.setCell(0, 3, 23509);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 542 ms</span>
+              <span class="suite-total-time">Total running time: 23 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -235,14 +226,14 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">favbet.testCases.LoginTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">favbet.testCases.betInsufficientFundsTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">setUp(chrome, windows)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">loginTest(ManUtd, Manutd123, Invalid)</span>
-                <span class="method-start">2251 ms</span>
+                <span class="method-name">betInsufficientFunds</span>
+                <span class="method-start">2446 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
