--- a/test-output/index.html
+++ b/test-output/index.html
@@ -103,7 +103,7 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="favbet.testCases.PossibleWinningsTest" class="method navigator-link" hash-for-method="pissibleWinningsAmount">pissibleWinningsAmount</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="favbet.testCases.ResultsSearchTest" class="method navigator-link" hash-for-method="SearchResults">SearchResults</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -121,14 +121,14 @@
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">favbet.testCases.PossibleWinningsTest</span>
+              <span class="class-name">favbet.testCases.ResultsSearchTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="pissibleWinningsAmount">
-                  </a> <!-- pissibleWinningsAmount -->
-                  <span class="method-name">pissibleWinningsAmount</span>
+                  <a name="SearchResults">
+                  </a> <!-- SearchResults -->
+                  <span class="method-name">SearchResults</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -161,7 +161,7 @@
   &lt;/listeners&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;favbet.testCases.PossibleWinningsTest&quot;/&gt;
+      &lt;class name=&quot;favbet.testCases.ResultsSearchTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test --&gt;
 &lt;/suite&gt; &lt;!-- Suite --&gt;
@@ -189,7 +189,7 @@
               <span class="test-group-name">Regression</span>
               <br/>
               <div class="method-in-group">
-                <span class="method-in-group-name">pissibleWinningsAmount</span>
+                <span class="method-in-group-name">SearchResults</span>
                 <br/>
               </div> <!-- method-in-group -->
             </div> <!-- test-group -->
@@ -211,14 +211,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'pissibleWinningsAmount')
-data.setCell(0, 2, 'favbet.testCases.PossibleWinningsTest')
-data.setCell(0, 3, 9475);
+data.setCell(0, 1, 'SearchResults')
+data.setCell(0, 2, 'favbet.testCases.ResultsSearchTest')
+data.setCell(0, 3, 2965);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 9 seconds</span>
+              <span class="suite-total-time">Total running time: 2 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -244,14 +244,14 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">favbet.testCases.PossibleWinningsTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">favbet.testCases.ResultsSearchTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">setUp(chrome, windows)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">pissibleWinningsAmount</span>
-                <span class="method-start">3575 ms</span>
+                <span class="method-name">SearchResults</span>
+                <span class="method-start">2350 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
